fix some bugs, configure hyprlock, hyprshot, colors and some other things

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,13 +50,14 @@ $editor = code
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = hyprpaper
+exec-once = sleep 1 && waybar
 exec-once = nm-applet
 exec-once = [workspace 1] $terminal
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = [workspace 2 silent] $browser
 exec-once = $editor
-exec-once = [workspace 4 silent] spotify-launcher --check-update
+exec-once = sleep 1 && [workspace 4 silent] spotify-launcher --check-update
 
 
 
@@ -67,7 +68,8 @@ exec-once = [workspace 4 silent] spotify-launcher --check-update
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,12
-env = HYPRCURSOR_SIZE,12
+env = HYPRCURSOR_THEME,"Future-Cyan-Hyprcursor_Theme"
+env = HYPRCURSOR_SIZE,40
 
 
 ###################
@@ -252,6 +254,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, Print, exec, hyprshot -o ~/Images/Prints/ -m region
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
