--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -10,6 +10,12 @@
 #
 
 $font = JetBrainsMono Nerd Font
+$font_bold = JetBrainsMono Nerd Font Bold
+
+$background = rgb(006175)
+$foreground = rgb(8aebff)
+$foreground-dark = rgb(72c3d4)
+$selection = rgb(363647)
 
 general {
     hide_cursor = true
@@ -42,12 +48,12 @@ background {
 input-field {
     monitor =
     size = 20%, 5%
-    outline_thickness = 3
+    outline_thickness = 2
     inner_color = rgba(0, 0, 0, 0.0) # no fill
 
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
+    outer_color = $background
+    check_color = $foreground
+    fail_color = $selection
 
     font_color = rgb(143, 143, 143)
     fade_on_empty = false
@@ -75,10 +81,10 @@ label {
     monitor =
     text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
     font_size = 90
-    font_family = $font
+    font_family = $font_bold
 
-    position = -30, 0
-    halign = right
+    position = 0, 0
+    halign = center
     valign = top
 }
 
@@ -87,20 +93,10 @@ label {
     monitor =
     text = cmd[update:60000] date +"%A, %d %B %Y" # update every 60 seconds
     font_size = 25
-    font_family = $font
+    font_family = $font_bold
+    font
 
-    position = -30, -150
-    halign = right
-    valign = top
-}
-
-label {
-    monitor =
-    text = $LAYOUT[en,ru]
-    font_size = 24
-    onclick = hyprctl switchxkblayout all next
-
-    position = 250, -20
+    position = 0, -150
     halign = center
-    valign = center
+    valign = top
 }
