update the theming, fixing other bugs

--- a/networkmanager-dmenu/config.ini
+++ b/networkmanager-dmenu/config.ini
@@ -16,7 +16,7 @@ highlight_bg = #E0E0E0
 # Make active connection bold (only applicable to Wofi)
 highlight_bold = True
 # Remove extra spacing from display
-compact = False
+compact = True
 # Pinentry command e.g. `pinentry-gtk`
 pinentry =
 # String of 4 unicode characters representing 1-4 bars strength
@@ -24,7 +24,7 @@ wifi_chars = ▂▄▆█
 # Characters representing signal strength as an icon
 # wifi_icons = 󰤯󰤟󰤢󰤥󰤨
 # Python style format string for the access point entries
-format = {name}  {sec}  {bars}
+format = {name}  {bars}
 # Available variables are:
 #  * {name} - Access point name
 #  * {sec} - Security type
