--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,7 +35,7 @@ $terminal_name = "Terminal"
 # Set programs that you use
 $terminal = kitty --title $terminal_name
 $fileManager = nautilus
-$menu = rofi -show drun
+$menu = rofi -show drun -show-icons
 $notif = swaync
 $browser = firefox
 $editor = code
@@ -57,7 +57,7 @@ exec-once = [workspace 1] $terminal
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = [workspace 2 silent] $browser
 exec-once = $editor
-exec-once = sleep 1 && [workspace 4 silent] spotify-launcher --check-update
+exec-once = [workspace 4 silent] spotify-launcher
 
 
 
@@ -67,9 +67,11 @@ exec-once = sleep 1 && [workspace 4 silent] spotify-launcher --check-update
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,12
 env = HYPRCURSOR_THEME,"Future-Cyan-Hyprcursor_Theme"
 env = HYPRCURSOR_SIZE,40
+
+env = XCURSOR_THEME,Future-cyan-cursors
+env = XCURSOR_SIZE,32
 
 
 ###################
@@ -122,10 +124,10 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.7
+    inactive_opacity = 1.01
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -135,7 +137,7 @@ decoration {
     blur {
         enabled = true
         size = 3
-        passes = 1
+        passes = 3
 
         vibrancy = 0.1696
     }
@@ -255,6 +257,8 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, Print, exec, hyprshot -o ~/Images/Prints/ -m region
+bind = $mainMod, B, exec, $browser
+bind = $mainMod shift, P, exec, rofi -config /home/theo/.config/rofi/config_power_menu.rasi -show p -modi p:rofi-power-menu
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
