--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -332,4 +332,4 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrule = workspace 3 silent, initialClass:code-oss
+windowrule = workspace 3 silent, initialClass:Code
