--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -57,7 +57,8 @@ exec-once = [workspace 1] $terminal
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = [workspace 2 silent] $browser
 exec-once = $editor
-exec-once = [workspace 4 silent] spotify-launcher
+exec-once = [workspace 4 silent] ~/.config/scripts/spotify-opener.sh
+exec-once = ~/.config/scripts/spotify-notify.sh
 
 
 
