fix vscode not opening in correct workspace (with the limitation that vscode instances are always bound to workspace 3)

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -56,7 +56,7 @@ exec-once = nm-applet
 exec-once = [workspace 1] $terminal
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 3 silent] $editor
+exec-once = $editor
 exec-once = [workspace 4 silent] ~/.config/scripts/spotify-opener.sh
 exec-once = ~/.config/scripts/spotify-notify.sh
 
@@ -332,3 +332,5 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrule = workspace 3 silent, initialClass:Code
