change a bit of networkmanager dmenu  notify functions

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -154,7 +154,7 @@
 		},	
 		"tooltip-format": "{}: {bandwidthUpBits} 󰅧  | {bandwidthDownBits} 󰅢 ",
 		"interval": 1,
-		"on-click": "networkmanager_dmenu"
+		"on-click": "~/.config/scripts/networkmanager_dmenu"
 	}, 
  
 	"group/audio": {
