same as last commit, just forgot to stage some changes

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = /home/theo/Images/wallpaper2.jpg
-wallpaper = , /home/theo/Images/wallpaper2.jpg
+splash = false
+
+wallpaper {
+    monitor = eDP-1
+    path = ~/Images/wallpaper2.jpg
+}
