--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,6 +23,7 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=eDP-1,preferred,auto,1
+monitor = , preferred, auto, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -213,19 +214,26 @@ misc {
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
     kb_layout = br
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.1 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = true
-        scroll_factor = 0.5;
+        scroll_factor = 0.5
     }
+}
+
+input {
+    sensitivity = 0.1
+    accel_profile = flat
+}
+
+device {
+    name = gxtp5100:00-27c6:01e0-touchpad
+    scroll_factor = 0.5
+    sensitivity = 0.4
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
@@ -233,11 +241,6 @@ gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = 0.5
-}
-
 
 
 ###################
@@ -296,7 +299,7 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod,mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
@@ -328,9 +331,37 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule {
+  name = windowrule-1
+  suppress_event = maximize
+  match:class = .*
+}
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+  name = windowrule-2
+  no_focus = on
+  match:class = ^$
+  match:title = ^$
+  match:xwayland = 1
+  match:float = 1
+  match:fullscreen = 0
+  match:pin = 0
+}
 
-windowrule = workspace 3 silent, initialClass:Code
+
+windowrule {
+  name = windowrule-code
+  workspace = 3 silent
+  match:initial_class = code
+}
+
+windowrule {
+  name = windowrule-spotify
+  workspace = 4 silent
+  match:initial_class = spotify
+}
+
+
+
+windowrule = monitor DP-1, float 1, move 1300 54, size 400 160, match:class kitty-sinkswitch
