change kitty theme and add some keybinds to lazyvim

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,8 +39,8 @@ $fileManager = nautilus
 $menu = rofi -show drun -show-icons
 $notif = swaync
 $browser = firefox
-$editor = code
-
+$editor = $terminal nvim
+$editor_prog = $terminal -d ~/prog nvim
 
 #################
 ### AUTOSTART ###
@@ -54,10 +54,10 @@ $editor = code
 exec-once = hyprpaper
 exec-once = sleep 1 && waybar
 exec-once = nm-applet
-exec-once = [workspace 1] $terminal
+exec-once = [workspace 1] $terminal 
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = [workspace 2 silent] $browser
-exec-once = $editor
+exec-once = [workspace 3 silent] $editor_prog
 exec-once = [workspace 4 silent] ~/.config/scripts/spotify-opener.sh
 exec-once = ~/.config/scripts/spotify-notify.sh
 
@@ -242,7 +242,6 @@ gesture = 3, horizontal, workspace
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
 
-
 ###################
 ### KEYBINDINGS ###
 ###################
@@ -263,6 +262,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, Print, exec, hyprshot -o ~/Images/Prints/ -m region
 bind = $mainMod, B, exec, $browser
 bind = $mainMod shift, P, exec, rofi -config /home/theo/.config/rofi/config_power_menu.rasi -show p -modi p:rofi-power-menu
+bind = $mainMod, O, exec, $editor_prog
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -313,6 +313,7 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86Calculator, exec, [workspace special:magic; float; size 1400 1000] $terminal calc
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -350,11 +351,6 @@ windowrule {
 }
 
 
-windowrule {
-  name = windowrule-code
-  workspace = 3 silent
-  match:initial_class = code
-}
 
 windowrule {
   name = windowrule-spotify
