some changes to lazyvim

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -350,7 +350,12 @@ windowrule {
   match:pin = 0
 }
 
-
+windowrule {
+    name = flutter_testing_force_floating
+    match:initial_class = com\.example\..*
+    float = true
+    workspace = special:magic
+}
 
 windowrule {
   name = windowrule-spotify
